Fixing many design issues
Making card's min width to fixed size.
Removing double vertical scrollbars.
Adding ng-cloak to hide raw angularjs code like dummy controller page
and choose image.
Have to fix Main card alignment in center.

--- a/todoApp/src/main/webapp/app/homepage/homepage.css
+++ b/todoApp/src/main/webapp/app/homepage/homepage.css
@@ -1,3 +1,7 @@
 md-sidenav {
 	height: -webkit-fill-available;
 }
+
+.notespane {
+	overflow: visible;
+}
